# hermes-channel-octo

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  plugin.yaml  pyproject.toml
.github/workflows/: test.yml
src/hermes_octo_plugin/: __init__.py  adapter.py  agent_tools.py  api.py  commands.py  mention.py  permission.py  plugin.yaml  protocol.py  types.py
src/hermes_octo_plugin/skills/octo-bot-api/: SKILL.md
tests/: __init__.py  conftest.py  test_adapter.py  test_api.py  test_bundled_shim.py  test_cache_cleanup.py  test_commands.py  test_content_disposition.py  test_member_prefix_and_shared_groups.py  test_mention.py  test_multiple_forward.py  test_package_data.py  test_permission.py  test_plugin_loading.py  test_prefetch.py  test_protocol.py  test_reconnect.py  test_richtext.py  test_security.py  test_streaming.py  test_thread_md.py  test_types.py
